--- a/app/src/main/res/layout/cellules.xml
+++ b/app/src/main/res/layout/cellules.xml
@@ -2,31 +2,30 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/cellules"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="150dp"
+    android:weightSum="1">
 
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:id="@+id/img"
+        android:layout_width="10dp"
+        android:layout_height="96dp"
         android:layout_marginBottom="16dp"
         android:layout_marginLeft="7dp"
         android:layout_marginStart="7dp"
         android:layout_marginTop="16dp"
-        android:layout_weight="1" />
+        android:layout_weight="0.74" />
 
     <TextView
-        android:id="@+id/textView23"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:id="@+id/textViewEquipage"
+        android:layout_width="207dp"
+        android:layout_height="70dp"
         android:layout_marginBottom="22dp"
         android:layout_marginEnd="6dp"
         android:layout_marginLeft="18dp"
         android:layout_marginRight="6dp"
         android:layout_marginStart="18dp"
         android:layout_marginTop="22dp"
-        android:layout_weight="1"
         android:gravity="center"
         android:text="TextView"
         android:textAlignment="center"
