--- a/app/src/main/res/layout/cellules.xml
+++ b/app/src/main/res/layout/cellules.xml
@@ -14,12 +14,12 @@
         android:layout_marginLeft="7dp"
         android:layout_marginStart="7dp"
         android:layout_marginTop="16dp"
-        android:layout_weight="0.74" />
+        android:layout_weight="0.49" />
 
     <TextView
         android:id="@+id/textViewEquipage"
-        android:layout_width="207dp"
-        android:layout_height="70dp"
+        android:layout_width="133dp"
+        android:layout_height="60dp"
         android:layout_marginBottom="22dp"
         android:layout_marginEnd="6dp"
         android:layout_marginLeft="18dp"
@@ -30,6 +30,16 @@
         android:text="TextView"
         android:textAlignment="center"
         android:textSize="24sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:layout_weight="0.30" />
+
+    <Button
+        android:id="@+id/cancel"
+        android:layout_width="31dp"
+        android:layout_height="58dp"
+        android:layout_weight="0.10"
+        android:background="@android:drawable/ic_menu_close_clear_cancel"
+        android:gravity="center_horizontal"
+        android:textAlignment="center" />
 
 </LinearLayout>
